--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@pusher/chatkit": "^0.7.12",
-    "@pusher/chatkit-server": "^0.12.1",
+    "@pusher/chatkit-server": "^1.0.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "lodash": "^4.17.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "2.1.5"
   },
   "devDependencies": {
-    "concurrently": "^3.5.1"
+    "concurrently": "^4.1.0"
   },
   "scripts": {
     "start": "concurrently \"node ./server.js\" \"react-scripts start\"",
